# serializer version: 1
# name: test_switch_snapshot[switch.homee_00055511eecc_1_11-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.homee_00055511eecc_1_11',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.OUTLET: 'outlet'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '00055511EECC-1-11',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_snapshot[switch.homee_00055511eecc_1_11-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'outlet',
    }),
    'context': <ANY>,
    'entity_id': 'switch.homee_00055511eecc_1_11',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_snapshot[switch.none_identification_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'switch.none_identification_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Identification Mode',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'identification_mode',
    'unique_id': '00055511EECC-1-4',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_snapshot[switch.none_identification_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Identification Mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.none_identification_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_snapshot[switch.none_impulse_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.none_impulse_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Impulse 1',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'impulse_instance',
    'unique_id': '00055511EECC-1-5',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_snapshot[switch.none_impulse_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Impulse 1',
    }),
    'context': <ANY>,
    'entity_id': 'switch.none_impulse_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_snapshot[switch.none_impulse_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.none_impulse_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Impulse 2',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'impulse_instance',
    'unique_id': '00055511EECC-1-6',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_snapshot[switch.none_impulse_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Impulse 2',
    }),
    'context': <ANY>,
    'entity_id': 'switch.none_impulse_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_snapshot[switch.none_light_impulse-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.none_light_impulse',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Light Impulse',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'light_impulse',
    'unique_id': '00055511EECC-1-7',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_snapshot[switch.none_light_impulse-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Light Impulse',
    }),
    'context': <ANY>,
    'entity_id': 'switch.none_light_impulse',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_snapshot[switch.none_manual_operation-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.none_manual_operation',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Manual Operation',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'manual_operation',
    'unique_id': '00055511EECC-1-8',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_snapshot[switch.none_manual_operation-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Manual Operation',
    }),
    'context': <ANY>,
    'entity_id': 'switch.none_manual_operation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_snapshot[switch.none_motor_rotation_direction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.none_motor_rotation_direction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Motor rotation direction',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'motor_rotation',
    'unique_id': '00055511EECC-1-9',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_snapshot[switch.none_motor_rotation_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Motor rotation direction',
    }),
    'context': <ANY>,
    'entity_id': 'switch.none_motor_rotation_direction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_snapshot[switch.none_open_partial_impulse-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.none_open_partial_impulse',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Open Partial Impulse',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'open_partial_impulse',
    'unique_id': '00055511EECC-1-10',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_snapshot[switch.none_open_partial_impulse-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Open Partial Impulse',
    }),
    'context': <ANY>,
    'entity_id': 'switch.none_open_partial_impulse',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_snapshot[switch.none_reset_meter_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.none_reset_meter_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Reset Meter 1',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_meter_instance',
    'unique_id': '00055511EECC-1-13',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_snapshot[switch.none_reset_meter_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Reset Meter 1',
    }),
    'context': <ANY>,
    'entity_id': 'switch.none_reset_meter_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_snapshot[switch.none_restore_last_known_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.none_restore_last_known_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Restore last known state',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'restore_last_known_state',
    'unique_id': '00055511EECC-1-14',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_snapshot[switch.none_restore_last_known_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Restore last known state',
    }),
    'context': <ANY>,
    'entity_id': 'switch.none_restore_last_known_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_snapshot[switch.none_ventilate_impulse-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.none_ventilate_impulse',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Ventilate Impulse',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'ventilate_impulse',
    'unique_id': '00055511EECC-1-17',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_snapshot[switch.none_ventilate_impulse-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Ventilate Impulse',
    }),
    'context': <ANY>,
    'entity_id': 'switch.none_ventilate_impulse',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_snapshot[switch.none_watchdog-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.none_watchdog',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Watchdog',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'watchdog_on_off',
    'unique_id': '00055511EECC-1-18',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_snapshot[switch.none_watchdog-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Watchdog',
    }),
    'context': <ANY>,
    'entity_id': 'switch.none_watchdog',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
